# thesis_strucutredness_aware_miner_guidance

./: .gitignore  README.md  index.html
questionnaire_prototype/: LICENSE  README.md  SETUP.md  add_custom_miner.md  pyproject.toml  requirements.txt
questionnaire_prototype/data/with-case-ids/: Log01_structured.xes  Log02_semiStructured.xes  Log03_looselyStructured.xes  Log04_structured.xes  Log05_structured.xes  Log06_semiStructured.xes  Log07_semiStructured.xes  Log08_looselyStructured.xes  Log09_unstructured.xes  Log10_semiStructured.xes  Log11_looselyStructured.xes  Log12_structured.xes  Log13_semiStructured.xes  Log14_looselyStructured_semiStructured.xes  Log15_structured.xes  Log16_looselyStructured.xes  Log17_semiStructured.xes  Log18_structured.xes  Log19_structured.xes  Log20_semiStructured.xes  Log21_looselyStructured.xes  Log22_looselyStructured.xes  Log23_unstructured.xes  Log24_unstructured.xes
questionnaire_prototype/docs/img/: README.md
questionnaire_prototype/flex_compare/: app.py  format_import.py  runner.py  state.py
questionnaire_prototype/flex_compare/assets/: fc_scroll_preserve.js  theme.css
questionnaire_prototype/flex_compare/examples/: heuristics_miner_cli.py
questionnaire_prototype/flex_compare/fragebogen/: __init__.py  annotations.py  combine.py  config_loader.py  declare_check.py  items.py  log_discovery.py  md_convert.py  phase_a.py  phase_a_answers.py  phase_b.py  phase_e.py  phase_e_answers.py  phase_t.py  phase_t_answers.py  scores.py  variant_replay.py
questionnaire_prototype/flex_compare/fragebogen/config/: loosely.yaml  semi.yaml  structured.yaml
questionnaire_prototype/flex_compare/internal/: experiment_reports.py
questionnaire_prototype/flex_compare/internal/declarative_evaluation/: __init__.py  api.py  minerful_fitness.py  precision_proxies.py  report_render.py  vacuity_minerful.py
questionnaire_prototype/flex_compare/tests/: test_annotations.py  test_builtin_registry_signature.py  test_format_import.py  test_fragebogen_combine.py  test_fragebogen_config.py  test_fragebogen_declare_check.py  test_fragebogen_items.py  test_fragebogen_log_discovery.py  test_fragebogen_phase_e.py  test_fragebogen_phase_t.py  test_param_schema_render.py  test_runner_dispatch.py  test_runner_outcomes.py  test_stable_config_hash.py  test_state_migration.py  test_state_roundtrip.py
questionnaire_prototype/flex_compare/ui/: ids.py  layout.py
questionnaire_prototype/tools/MINERful/: libs.cfg  run-MINERful.sh
(+90 files in other folders)
